[package]
name = "convertnumber"
version = "0.1.0"
edition = "2018"
authors = "Ukpai Ugochi"
description = "This is a simple crate to illustrate number conversion from float to integer, I was trying out `impl` and `traits` and thought it was cool to build something from it"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
